<resources>
    <string name="app_name">VirgoInventarisationTool</string>
    <string name="cold_drinks">cold drinks</string>
    <string name="alcohol">alcohol</string>
    <string name="food">food</string>
    <string name="merch">merch</string>
    <string name="clothes">clothes</string>
    <string name="send">send</string>
    <string name="other">other</string>
    <string name="In">in</string>
    <string name="out">out</string>
    <string name="acrate">amount of crates:</string>
    <string name="abottles">Amount of bottles:</string>
    <string name="crates">crates</string>
    <string name="bottles">bottles</string>
    <string name="add">add</string>
    <string name="select_language">Select language</string>
    <string name="apply">apply</string>

    <string-array name="country_array">
        <item>Dutch</item>
        <item>English</item>
    </string-array>
    <string name="ipAdres">IP address</string>
    <string name="port">port</string>
    <string name="currentSettings">current settings</string>
    <string name="wrongArgument">wrong arguments</string>
    <string name="nAllowedValue">not allowed value</string>
    <string name="remove">remove</string>
    <string name="change">change</string>
    <string name="noInternet">Non valid internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
